Import of LZE/HTML-Template-LZE-0.26 from CPAN.
gitpan-cpan-distribution: HTML-Template-LZE
gitpan-cpan-version:      0.26
gitpan-cpan-path:         LZE/HTML-Template-LZE-0.26.tar.gz
gitpan-cpan-author:       LZE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: HTML-Template-LZE
-version: 0.25
+version: 0.26
 author:
   - 'Dirk Lindner <lze@cpan.orge>'
 abstract: Simple HTML Template
@@ -8,13 +8,13 @@ license: lgpl
 resources:
   license: http://opensource.org/licenses/artistic-license.php
 requires:
-  CGI::LZE: 0.25
+  CGI::LZE: '>=0.25'
   Module::Build: 0
   Test::More: 0
 provides:
   HTML::Template::LZE:
     file: lib/HTML/Template/LZE.pm
-    version: 0.25
+    version: 0.26
 generated_by: Module::Build version 0.2808
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
